implement single thread prototype